--- a/src/main/resources/templates/mail/summary-scheduled-mail.html
+++ b/src/main/resources/templates/mail/summary-scheduled-mail.html
@@ -95,10 +95,9 @@
                             <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                                 <tr>
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
-                                        <p th:if="${is_friend}" style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Yo <span th:text="${admin_config.getAdminName()}"></span>,</p>
-                                        <p th:unless="${is_friend}" style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Dear <span th:text="${admin_config.getAdminName()}"></span>,</p>
+                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Dear <span th:text="${admin_name}"></span>,</p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;" th:text="${message}"></p>
-                                        <table th:if="${show_button}" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
+                                        <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                                             <tbody>
                                             <tr>
                                                 <td align="left" style="font-family: sans-serif; font-size: 14px; vertical-align: top; padding-bottom: 15px;">
@@ -113,11 +112,7 @@
                                             </tr>
                                             </tbody>
                                         </table>
-                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Application functionality:</p>
-                                        <ul th:each="function : ${application_functionality}">
-                                            <li th:text="${function}"></li>
-                                        </ul>
-                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Yours sincerely,<br><span th:text="${sender}"></span><br>"<span th:text="${company_goal}"></span>"</p>
+                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Yours sincerely,<br><span th:text="${sender}"></span><br>"<span th:text="${company_config.getCompanyGoal()}"></span>"</p>
                                     </td>
                                 </tr>
                             </table>
@@ -132,7 +127,7 @@
                     <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                         <tr>
                             <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;"><span th:text="${company_name}"></span><br>E-mail: <span th:text="${company_mail}"></span> | Phone: <span th:text="${company_phone}"></span></span>
+                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;"><span th:text="${company_config.getCompanyName()}"></span><br>E-mail: <span th:text="${company_config.getCompanyMail()}"></span> | Phone: <span th:text="${company_config.getCompanyPhone()}"></span></span>
                             </td>
                         </tr>
                     </table>
